# GoddamnCr

./: .gitignore  CMakeLists.txt  Goddamn Cg Reincarnation.sln  GoddamnCr.sln  LICENSE.md  README.md
Cr Compiler/: AST.cpp  AST.h  Cr Compiler.vcxproj  Cr Compiler.vcxproj.filters  CrCompiler.cpp  Lexeme.cpp  Lexeme.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Profile.cpp  Profile.h  Scanner.cpp  Scanner.h  TestShader.fx  Utils.h
GenLexer/: GenLexerCs.csproj  Program.cs
GenLexer/Properties/: AssemblyInfo.cs
GoddamnCr/: Compiler.cpp  Error.hpp  GoddamnCr.vcxproj  GoddamnCr.vcxproj.filters
GoddamnCr/Lexer/: Lexer.cpp  Lexer.hpp  LexerKeywords.hxx
GoddamnCr/Syntax/: SyntaxFactory.hpp
GoddamnCr/Utils/: String.hpp
